#3357 Fix window control button z-index

--- a/src/client/components/tabs/tabs.styl
+++ b/src/client/components/tabs/tabs.styl
@@ -151,7 +151,7 @@
   position absolute
   right 0
   top 0
-  z-index 200
+  z-index 900
   border-radius 0 0 3px 3px
   padding 0
   background main-light
